@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -54,6 +54,9 @@ import org.gradle.api.artifacts.component.ModuleComponentIdentifier;
 import org.gradle.api.artifacts.result.ResolvedArtifactResult;
 import org.gradle.api.attributes.DocsType;
 import org.gradle.api.attributes.Usage;
+import org.gradle.api.component.AdhocComponentWithVariants;
+import org.gradle.api.component.ConfigurationVariantDetails;
+import org.gradle.api.component.SoftwareComponent;
 import org.gradle.api.file.CopySpec;
 import org.gradle.api.file.DirectoryProperty;
 import org.gradle.api.file.FileCollection;
@@ -65,6 +68,7 @@ import org.gradle.api.plugins.JavaPluginExtension;
 import org.gradle.api.publish.PublishingExtension;
 import org.gradle.api.publish.maven.MavenPublication;
 import org.gradle.api.publish.maven.plugins.MavenPublishPlugin;
+import org.gradle.api.publish.tasks.GenerateModuleMetadata;
 import org.gradle.api.tasks.Classpath;
 import org.gradle.api.tasks.InputFiles;
 import org.gradle.api.tasks.JavaExec;
@@ -77,15 +81,20 @@ import org.gradle.api.tasks.SourceSetContainer;
 import org.gradle.api.tasks.Sync;
 import org.gradle.api.tasks.TaskAction;
 import org.gradle.api.tasks.TaskExecutionException;
+import org.gradle.api.tasks.TaskProvider;
 import org.gradle.api.tasks.bundling.Jar;
 import org.gradle.api.tasks.javadoc.Javadoc;
 import org.gradle.external.javadoc.StandardJavadocDocletOptions;
 import org.w3c.dom.Document;
+import org.w3c.dom.Element;
 import org.w3c.dom.Node;
+import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
 
 import org.springframework.boot.build.DeployedPlugin;
 import org.springframework.boot.build.MavenRepositoryPlugin;
+import org.springframework.boot.build.optional.OptionalDependenciesPlugin;
+import org.springframework.boot.build.test.DockerTestPlugin;
 import org.springframework.boot.build.test.IntegrationTestPlugin;
 import org.springframework.core.CollectionFactory;
 import org.springframework.util.Assert;
@@ -114,6 +123,33 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		addDocumentPluginGoalsTask(project, generatePluginDescriptorTask);
 		addPrepareMavenBinariesTask(project);
 		addExtractVersionPropertiesTask(project);
+		publishOptionalDependenciesInPom(project);
+		project.getTasks().withType(GenerateModuleMetadata.class).configureEach((task) -> task.setEnabled(false));
+	}
+
+	private void publishOptionalDependenciesInPom(Project project) {
+		project.getPlugins().withType(OptionalDependenciesPlugin.class, (optionalDependencies) -> {
+			SoftwareComponent component = project.getComponents().findByName("java");
+			if (component instanceof AdhocComponentWithVariants componentWithVariants) {
+				componentWithVariants.addVariantsFromConfiguration(
+						project.getConfigurations().getByName(OptionalDependenciesPlugin.OPTIONAL_CONFIGURATION_NAME),
+						ConfigurationVariantDetails::mapToOptional);
+			}
+		});
+		MavenPublication publication = (MavenPublication) project.getExtensions()
+			.getByType(PublishingExtension.class)
+			.getPublications()
+			.getByName("maven");
+		publication.getPom().withXml((xml) -> {
+			Element root = xml.asElement();
+			NodeList children = root.getChildNodes();
+			for (int i = 0; i < children.getLength(); i++) {
+				Node child = children.item(i);
+				if ("dependencyManagement".equals(child.getNodeName())) {
+					root.removeChild(child);
+				}
+			}
+		});
 	}
 
 	private void configurePomPackaging(Project project) {
@@ -128,20 +164,24 @@ public class MavenPluginPlugin implements Plugin<Project> {
 	private void addPopulateIntTestMavenRepositoryTask(Project project) {
 		Configuration runtimeClasspathWithMetadata = project.getConfigurations().create("runtimeClasspathWithMetadata");
 		runtimeClasspathWithMetadata
-				.extendsFrom(project.getConfigurations().getByName(JavaPlugin.RUNTIME_CLASSPATH_CONFIGURATION_NAME));
+			.extendsFrom(project.getConfigurations().getByName(JavaPlugin.RUNTIME_CLASSPATH_CONFIGURATION_NAME));
 		runtimeClasspathWithMetadata.attributes((attributes) -> attributes.attribute(DocsType.DOCS_TYPE_ATTRIBUTE,
 				project.getObjects().named(DocsType.class, "maven-repository")));
 		RuntimeClasspathMavenRepository runtimeClasspathMavenRepository = project.getTasks()
-				.create("runtimeClasspathMavenRepository", RuntimeClasspathMavenRepository.class);
-		runtimeClasspathMavenRepository.getOutputDirectory()
-				.set(new File(project.getBuildDir(), "runtime-classpath-repository"));
+			.create("runtimeClasspathMavenRepository", RuntimeClasspathMavenRepository.class);
+		runtimeClasspathMavenRepository.getOutputDir()
+			.set(new File(project.getBuildDir(), "runtime-classpath-repository"));
 		project.getDependencies()
-				.components((components) -> components.all(MavenRepositoryComponentMetadataRule.class));
-		Sync task = project.getTasks().create("populateIntTestMavenRepository", Sync.class);
-		task.setDestinationDir(new File(project.getBuildDir(), "int-test-maven-repository"));
+			.components((components) -> components.all(MavenRepositoryComponentMetadataRule.class));
+		Sync task = project.getTasks().create("populateTestMavenRepository", Sync.class);
+		task.setDestinationDir(new File(project.getBuildDir(), "test-maven-repository"));
 		task.with(copyIntTestMavenRepositoryFiles(project, runtimeClasspathMavenRepository));
 		task.dependsOn(project.getTasks().getByName(MavenRepositoryPlugin.PUBLISH_TO_PROJECT_REPOSITORY_TASK_NAME));
 		project.getTasks().getByName(IntegrationTestPlugin.INT_TEST_TASK_NAME).dependsOn(task);
+		project.getPlugins()
+			.withType(DockerTestPlugin.class)
+			.all((dockerTestPlugin) -> project.getTasks()
+				.named(DockerTestPlugin.DOCKER_TEST_TASK_NAME, (dockerTest) -> dockerTest.dependsOn(task)));
 	}
 
 	private CopySpec copyIntTestMavenRepositoryFiles(Project project,
@@ -156,8 +196,8 @@ public class MavenPluginPlugin implements Plugin<Project> {
 	private void addDocumentPluginGoalsTask(Project project, MavenExec generatePluginDescriptorTask) {
 		DocumentPluginGoals task = project.getTasks().create("documentPluginGoals", DocumentPluginGoals.class);
 		File pluginXml = new File(generatePluginDescriptorTask.getOutputs().getFiles().getSingleFile(), "plugin.xml");
-		task.setPluginXml(pluginXml);
-		task.setOutputDir(new File(project.getBuildDir(), "docs/generated/goals/"));
+		task.getPluginXml().set(pluginXml);
+		task.getOutputDir().set(new File(project.getBuildDir(), "generated/docs/maven-plugin-goals/"));
 		task.dependsOn(generatePluginDescriptorTask);
 	}
 
@@ -171,7 +211,7 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 	private MavenExec createGenerateHelpMojoTask(Project project, File helpMojoDir) {
 		MavenExec task = project.getTasks().create("generateHelpMojo", MavenExec.class);
-		task.setProjectDir(helpMojoDir);
+		task.getProjectDir().set(helpMojoDir);
 		task.args("org.apache.maven.plugins:maven-plugin-plugin:3.6.1:helpmojo");
 		task.getOutputs().dir(new File(helpMojoDir, "target/generated-sources/plugin"));
 		return task;
@@ -219,10 +259,10 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 	private FormatHelpMojoSource createFormatHelpMojoSource(Project project, MavenExec generateHelpMojoTask,
 			File generatedHelpMojoDir) {
-		FormatHelpMojoSource formatHelpMojoSource = project.getTasks().create("formatHelpMojoSource",
-				FormatHelpMojoSource.class);
+		FormatHelpMojoSource formatHelpMojoSource = project.getTasks()
+			.create("formatHelpMojoSource", FormatHelpMojoSource.class);
 		formatHelpMojoSource.setGenerator(generateHelpMojoTask);
-		formatHelpMojoSource.setOutputDir(generatedHelpMojoDir);
+		formatHelpMojoSource.getOutputDir().set(generatedHelpMojoDir);
 		return formatHelpMojoSource;
 	}
 
@@ -241,9 +281,11 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		MavenExec generatePluginDescriptor = project.getTasks().create("generatePluginDescriptor", MavenExec.class);
 		generatePluginDescriptor.args("org.apache.maven.plugins:maven-plugin-plugin:3.6.1:descriptor");
 		generatePluginDescriptor.getOutputs().dir(new File(mavenDir, "target/classes/META-INF/maven"));
-		generatePluginDescriptor.getInputs().dir(new File(mavenDir, "target/classes/org"))
-				.withPathSensitivity(PathSensitivity.RELATIVE).withPropertyName("plugin classes");
-		generatePluginDescriptor.setProjectDir(mavenDir);
+		generatePluginDescriptor.getInputs()
+			.dir(new File(mavenDir, "target/classes/org"))
+			.withPathSensitivity(PathSensitivity.RELATIVE)
+			.withPropertyName("plugin classes");
+		generatePluginDescriptor.getProjectDir().set(mavenDir);
 		return generatePluginDescriptor;
 	}
 
@@ -253,9 +295,16 @@ public class MavenPluginPlugin implements Plugin<Project> {
 	}
 
 	private void addPrepareMavenBinariesTask(Project project) {
-		PrepareMavenBinaries task = project.getTasks().create("prepareMavenBinaries", PrepareMavenBinaries.class);
-		task.setOutputDir(new File(project.getBuildDir(), "maven-binaries"));
-		project.getTasks().getByName(IntegrationTestPlugin.INT_TEST_TASK_NAME).dependsOn(task);
+		TaskProvider<PrepareMavenBinaries> task = project.getTasks()
+			.register("prepareMavenBinaries", PrepareMavenBinaries.class,
+					(prepareMavenBinaries) -> prepareMavenBinaries.getOutputDir()
+						.set(new File(project.getBuildDir(), "maven-binaries")));
+		project.getTasks()
+			.getByName(IntegrationTestPlugin.INT_TEST_TASK_NAME)
+			.getInputs()
+			.dir(task.map(PrepareMavenBinaries::getOutputDir))
+			.withPathSensitivity(PathSensitivity.RELATIVE)
+			.withPropertyName("mavenBinaries");
 	}
 
 	private void replaceVersionPlaceholder(CopySpec copy, Project project) {
@@ -267,49 +316,45 @@ public class MavenPluginPlugin implements Plugin<Project> {
 	}
 
 	private void addExtractVersionPropertiesTask(Project project) {
-		ExtractVersionProperties extractVersionProperties = project.getTasks().create("extractVersionProperties",
-				ExtractVersionProperties.class);
+		ExtractVersionProperties extractVersionProperties = project.getTasks()
+			.create("extractVersionProperties", ExtractVersionProperties.class);
 		extractVersionProperties.setEffectiveBoms(project.getConfigurations().create("versionProperties"));
-		extractVersionProperties.getDestination().set(project.getLayout().getBuildDirectory().dir("generated-resources")
+		extractVersionProperties.getDestination()
+			.set(project.getLayout()
+				.getBuildDirectory()
+				.dir("generated-resources")
 				.map((dir) -> dir.file("extracted-versions.properties")));
 	}
 
-	public static class FormatHelpMojoSource extends DefaultTask {
+	public abstract static class FormatHelpMojoSource extends DefaultTask {
 
 		private Task generator;
 
-		private File outputDir;
-
 		void setGenerator(Task generator) {
 			this.generator = generator;
-			getInputs().files(this.generator).withPathSensitivity(PathSensitivity.RELATIVE)
-					.withPropertyName("generated source");
+			getInputs().files(this.generator)
+				.withPathSensitivity(PathSensitivity.RELATIVE)
+				.withPropertyName("generated source");
 		}
 
 		@OutputDirectory
-		public File getOutputDir() {
-			return this.outputDir;
-		}
-
-		void setOutputDir(File outputDir) {
-			this.outputDir = outputDir;
-		}
+		public abstract DirectoryProperty getOutputDir();
 
 		@TaskAction
 		void syncAndFormat() {
 			FileFormatter formatter = new FileFormatter();
 			for (File output : this.generator.getOutputs().getFiles()) {
 				formatter.formatFiles(getProject().fileTree(output), StandardCharsets.UTF_8)
-						.forEach((edit) -> save(output, edit));
+					.forEach((edit) -> save(output, edit));
 			}
 		}
 
 		private void save(File output, FileEdit edit) {
 			Path relativePath = output.toPath().relativize(edit.getFile().toPath());
-			Path outputLocation = this.outputDir.toPath().resolve(relativePath);
+			Path outputLocation = getOutputDir().getAsFile().get().toPath().resolve(relativePath);
 			try {
 				Files.createDirectories(outputLocation.getParent());
-				Files.write(outputLocation, edit.getFormattedContent().getBytes(StandardCharsets.UTF_8));
+				Files.writeString(outputLocation, edit.getFormattedContent());
 			}
 			catch (Exception ex) {
 				throw new TaskExecutionException(this, ex);
@@ -329,10 +374,11 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 		@Override
 		public void execute(ComponentMetadataContext context) {
-			context.getDetails().maybeAddVariant("compileWithMetadata", "compile",
-					(variant) -> configureVariant(context, variant));
-			context.getDetails().maybeAddVariant("apiElementsWithMetadata", "apiElements",
-					(variant) -> configureVariant(context, variant));
+			context.getDetails()
+				.maybeAddVariant("compileWithMetadata", "compile", (variant) -> configureVariant(context, variant));
+			context.getDetails()
+				.maybeAddVariant("apiElementsWithMetadata", "apiElements",
+						(variant) -> configureVariant(context, variant));
 		}
 
 		private void configureVariant(ComponentMetadataContext context, VariantMetadata variant) {
@@ -349,21 +395,16 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 	}
 
-	public static class RuntimeClasspathMavenRepository extends DefaultTask {
+	public abstract static class RuntimeClasspathMavenRepository extends DefaultTask {
 
 		private final Configuration runtimeClasspath;
 
-		private final DirectoryProperty outputDirectory;
-
 		public RuntimeClasspathMavenRepository() {
 			this.runtimeClasspath = getProject().getConfigurations().getByName("runtimeClasspathWithMetadata");
-			this.outputDirectory = getProject().getObjects().directoryProperty();
 		}
 
 		@OutputDirectory
-		public DirectoryProperty getOutputDirectory() {
-			return this.outputDirectory;
-		}
+		public abstract DirectoryProperty getOutputDir();
 
 		@Classpath
 		public Configuration getRuntimeClasspath() {
@@ -373,14 +414,15 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		@TaskAction
 		public void createRepository() {
 			for (ResolvedArtifactResult result : this.runtimeClasspath.getIncoming().getArtifacts()) {
-				if (result.getId().getComponentIdentifier() instanceof ModuleComponentIdentifier) {
-					ModuleComponentIdentifier identifier = (ModuleComponentIdentifier) result.getId()
-							.getComponentIdentifier();
-					String fileName = result.getFile().getName()
-							.replace(identifier.getVersion() + "-" + identifier.getVersion(), identifier.getVersion());
-					File repositoryLocation = this.outputDirectory.dir(identifier.getGroup().replace('.', '/') + "/"
-							+ identifier.getModule() + "/" + identifier.getVersion() + "/" + fileName).get()
-							.getAsFile();
+				if (result.getId().getComponentIdentifier() instanceof ModuleComponentIdentifier identifier) {
+					String fileName = result.getFile()
+						.getName()
+						.replace(identifier.getVersion() + "-" + identifier.getVersion(), identifier.getVersion());
+					File repositoryLocation = getOutputDir()
+						.dir(identifier.getGroup().replace('.', '/') + "/" + identifier.getModule() + "/"
+								+ identifier.getVersion() + "/" + fileName)
+						.get()
+						.getAsFile();
 					repositoryLocation.getParentFile().mkdirs();
 					try {
 						Files.copy(result.getFile().toPath(), repositoryLocation.toPath(),
@@ -395,15 +437,9 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 	}
 
-	public static class ExtractVersionProperties extends DefaultTask {
-
-		private final RegularFileProperty destination;
+	public abstract static class ExtractVersionProperties extends DefaultTask {
 
 		private FileCollection effectiveBoms;
-
-		public ExtractVersionProperties() {
-			this.destination = getProject().getObjects().fileProperty();
-		}
 
 		@InputFiles
 		@PathSensitive(PathSensitivity.RELATIVE)
@@ -416,9 +452,7 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		}
 
 		@OutputFile
-		public RegularFileProperty getDestination() {
-			return this.destination;
-		}
+		public abstract RegularFileProperty getDestination();
 
 		@TaskAction
 		public void extractVersionProperties() {
@@ -428,7 +462,7 @@ public class MavenPluginPlugin implements Plugin<Project> {
 		}
 
 		private void writeProperties(Properties versions) {
-			File outputFile = this.destination.getAsFile().get();
+			File outputFile = getDestination().getAsFile().get();
 			outputFile.getParentFile().mkdirs();
 			try (Writer writer = new FileWriter(outputFile)) {
 				versions.store(writer, null);
@@ -448,6 +482,8 @@ public class MavenPluginPlugin implements Plugin<Project> {
 			effectiveBom.property("spring-framework.version", versions::setProperty);
 			effectiveBom.property("jakarta-servlet.version", versions::setProperty);
 			effectiveBom.property("kotlin.version", versions::setProperty);
+			effectiveBom.property("assertj.version", versions::setProperty);
+			effectiveBom.property("junit-jupiter.version", versions::setProperty);
 			return versions;
 		}
 
@@ -487,8 +523,8 @@ public class MavenPluginPlugin implements Plugin<Project> {
 
 		private String get(String expression) {
 			try {
-				Node node = (Node) this.xpath.compile("/project/" + expression).evaluate(this.document,
-						XPathConstants.NODE);
+				Node node = (Node) this.xpath.compile("/project/" + expression)
+					.evaluate(this.document, XPathConstants.NODE);
 				String text = (node != null) ? node.getTextContent() : null;
 				Assert.hasLength(text, () -> "No result for expression " + expression);
 				return text;
