@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,23 +17,23 @@
 package org.springframework.boot.actuate.autoconfigure.tracing.zipkin;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.Base64;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import zipkin2.CheckResult;
-import zipkin2.reporter.ClosedSenderException;
+import zipkin2.reporter.BytesMessageSender;
+import zipkin2.reporter.Encoding;
+import zipkin2.reporter.HttpEndpointSupplier;
+import zipkin2.reporter.HttpEndpointSuppliers;
 
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.test.web.client.MockRestServiceServer;
 import org.springframework.web.client.RestTemplate;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.assertThatException;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.content;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.header;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.method;
@@ -44,79 +44,96 @@ import static org.springframework.test.web.client.response.MockRestResponseCreat
  * Tests for {@link ZipkinRestTemplateSender}.
  *
  * @author Moritz Halbritter
+ * @author Stefan Bratanov
  */
-class ZipkinRestTemplateSenderTests {
+@SuppressWarnings({ "deprecation", "removal" })
+class ZipkinRestTemplateSenderTests extends ZipkinHttpSenderTests {
 
 	private static final String ZIPKIN_URL = "http://localhost:9411/api/v2/spans";
 
+	private RestTemplate restTemplate;
+
 	private MockRestServiceServer mockServer;
 
-	private ZipkinRestTemplateSender sut;
+	@Override
+	BytesMessageSender createSender() {
+		this.restTemplate = new RestTemplate();
+		this.mockServer = MockRestServiceServer.createServer(this.restTemplate);
+		return createSender(Encoding.JSON);
+	}
 
-	@BeforeEach
-	void setUp() {
-		RestTemplate restTemplate = new RestTemplate();
-		this.mockServer = MockRestServiceServer.createServer(restTemplate);
-		this.sut = new ZipkinRestTemplateSender(ZIPKIN_URL, restTemplate);
+	BytesMessageSender createSender(Encoding encoding) {
+		return createSender(HttpEndpointSuppliers.constantFactory(), encoding);
+	}
+
+	BytesMessageSender createSender(HttpEndpointSupplier.Factory endpointSupplierFactory, Encoding encoding) {
+		return new ZipkinRestTemplateSender(encoding, endpointSupplierFactory, ZIPKIN_URL, this.restTemplate);
 	}
 
 	@AfterEach
-	void tearDown() {
+	@Override
+	void afterEach() throws IOException {
+		super.afterEach();
 		this.mockServer.verify();
 	}
 
 	@Test
-	void checkShouldSendEmptySpanList() {
-		this.mockServer.expect(requestTo(ZIPKIN_URL)).andExpect(method(HttpMethod.POST))
-				.andExpect(content().string("[]")).andRespond(withStatus(HttpStatus.ACCEPTED));
-		assertThat(this.sut.check()).isEqualTo(CheckResult.OK);
+	void sendShouldSendSpansToZipkin() throws IOException {
+		this.mockServer.expect(requestTo(ZIPKIN_URL))
+			.andExpect(method(HttpMethod.POST))
+			.andExpect(content().contentType("application/json"))
+			.andExpect(content().string("[span1,span2]"))
+			.andRespond(withStatus(HttpStatus.ACCEPTED));
+		this.sender.send(List.of(toByteArray("span1"), toByteArray("span2")));
 	}
 
 	@Test
-	void checkShouldNotRaiseException() {
-		this.mockServer.expect(requestTo(ZIPKIN_URL)).andExpect(method(HttpMethod.POST))
-				.andRespond(withStatus(HttpStatus.INTERNAL_SERVER_ERROR));
-		CheckResult result = this.sut.check();
-		assertThat(result.ok()).isFalse();
-		assertThat(result.error()).hasMessageContaining("500 Internal Server Error");
+	void sendShouldSendSpansToZipkinInProto3() throws IOException {
+		this.mockServer.expect(requestTo(ZIPKIN_URL))
+			.andExpect(method(HttpMethod.POST))
+			.andExpect(content().contentType("application/x-protobuf"))
+			.andExpect(content().string("span1span2"))
+			.andRespond(withStatus(HttpStatus.ACCEPTED));
+		try (BytesMessageSender sender = createSender(Encoding.PROTO3)) {
+			sender.send(List.of(toByteArray("span1"), toByteArray("span2")));
+		}
 	}
 
 	@Test
-	void sendSpansShouldSendSpansToZipkin() throws IOException {
-		this.mockServer.expect(requestTo(ZIPKIN_URL)).andExpect(method(HttpMethod.POST))
-				.andExpect(content().contentType("application/json")).andExpect(content().string("[span1,span2]"))
-				.andRespond(withStatus(HttpStatus.ACCEPTED));
-		this.sut.sendSpans(List.of(toByteArray("span1"), toByteArray("span2"))).execute();
+	void sendUsesDynamicEndpoint() throws Exception {
+		this.mockServer.expect(requestTo(ZIPKIN_URL + "/1")).andRespond(withStatus(HttpStatus.ACCEPTED));
+		this.mockServer.expect(requestTo(ZIPKIN_URL + "/2")).andRespond(withStatus(HttpStatus.ACCEPTED));
+		try (HttpEndpointSupplier httpEndpointSupplier = new TestHttpEndpointSupplier(ZIPKIN_URL)) {
+			try (BytesMessageSender sender = createSender((endpoint) -> httpEndpointSupplier, Encoding.JSON)) {
+				sender.send(Collections.emptyList());
+				sender.send(Collections.emptyList());
+			}
+		}
 	}
 
 	@Test
-	void sendSpansShouldThrowOnHttpFailure() {
-		this.mockServer.expect(requestTo(ZIPKIN_URL)).andExpect(method(HttpMethod.POST))
-				.andRespond(withStatus(HttpStatus.INTERNAL_SERVER_ERROR));
-		assertThatThrownBy(() -> this.sut.sendSpans(List.of()).execute())
-				.hasMessageContaining("500 Internal Server Error");
+	void sendShouldHandleHttpFailures() {
+		this.mockServer.expect(requestTo(ZIPKIN_URL))
+			.andExpect(method(HttpMethod.POST))
+			.andRespond(withStatus(HttpStatus.INTERNAL_SERVER_ERROR));
+
+		assertThatException().isThrownBy(() -> this.sender.send(Collections.emptyList()))
+			.withMessageContaining("500 Internal Server Error");
 	}
 
 	@Test
-	void sendSpansShouldThrowIfCloseWasCalled() throws IOException {
-		this.sut.close();
-		assertThatThrownBy(() -> this.sut.sendSpans(List.of())).isInstanceOf(ClosedSenderException.class);
-	}
-
-	@Test
-	void sendSpansShouldCompressData() throws IOException {
+	void sendShouldCompressData() throws IOException {
 		String uncompressed = "a".repeat(10000);
 		// This is gzip compressed 10000 times 'a'
 		byte[] compressed = Base64.getDecoder()
-				.decode("H4sIAAAAAAAA/+3BMQ0AAAwDIKFLj/k3UR8NcA8AAAAAAAAAAAADUsAZfeASJwAA");
-		this.mockServer.expect(requestTo(ZIPKIN_URL)).andExpect(method(HttpMethod.POST))
-				.andExpect(header("Content-Encoding", "gzip")).andExpect(content().contentType("application/json"))
-				.andExpect(content().bytes(compressed)).andRespond(withStatus(HttpStatus.ACCEPTED));
-		this.sut.sendSpans(List.of(toByteArray(uncompressed))).execute();
-	}
-
-	private byte[] toByteArray(String input) {
-		return input.getBytes(StandardCharsets.UTF_8);
+			.decode("H4sIAAAAAAAA/+3BMQ0AAAwDIKFLj/k3UR8NcA8AAAAAAAAAAAADUsAZfeASJwAA");
+		this.mockServer.expect(requestTo(ZIPKIN_URL))
+			.andExpect(method(HttpMethod.POST))
+			.andExpect(header("Content-Encoding", "gzip"))
+			.andExpect(content().contentType("application/json"))
+			.andExpect(content().bytes(compressed))
+			.andRespond(withStatus(HttpStatus.ACCEPTED));
+		this.sender.send(List.of(toByteArray(uncompressed)));
 	}
 
 }
