@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.boot.diagnostics.analyzer;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.boot.context.properties.source.ConfigurationPropertySources;
@@ -52,7 +51,7 @@ class InvalidConfigurationPropertyValueFailureAnalyzer
 	protected FailureAnalysis analyze(Throwable rootFailure, InvalidConfigurationPropertyValueException cause) {
 		List<Descriptor> descriptors = getDescriptors(cause.getName());
 		if (descriptors.isEmpty()) {
-			return null;
+			descriptors = List.of(new Descriptor(null, cause.getValue(), null));
 		}
 		StringBuilder description = new StringBuilder();
 		appendDetails(description, cause, descriptors);
@@ -63,15 +62,17 @@ class InvalidConfigurationPropertyValueFailureAnalyzer
 
 	private List<Descriptor> getDescriptors(String propertyName) {
 		return getPropertySources().filter((source) -> source.containsProperty(propertyName))
-				.map((source) -> Descriptor.get(source, propertyName)).collect(Collectors.toList());
+			.map((source) -> Descriptor.get(source, propertyName))
+			.toList();
 	}
 
 	private Stream<PropertySource<?>> getPropertySources() {
 		if (this.environment == null) {
 			return Stream.empty();
 		}
-		return this.environment.getPropertySources().stream()
-				.filter((source) -> !ConfigurationPropertySources.isAttachedConfigurationPropertySource(source));
+		return this.environment.getPropertySources()
+			.stream()
+			.filter((source) -> !ConfigurationPropertySources.isAttachedConfigurationPropertySource(source));
 	}
 
 	private void appendDetails(StringBuilder message, InvalidConfigurationPropertyValueException cause,
@@ -96,9 +97,9 @@ class InvalidConfigurationPropertyValueFailureAnalyzer
 	private void appendAdditionalProperties(StringBuilder message, List<Descriptor> descriptors) {
 		List<Descriptor> others = descriptors.subList(1, descriptors.size());
 		if (!others.isEmpty()) {
-			message.append(
-					String.format("%n%nAdditionally, this property is also set in the following property %s:%n%n",
-							(others.size() > 1) ? "sources" : "source"));
+			message
+				.append(String.format("%n%nAdditionally, this property is also set in the following property %s:%n%n",
+						(others.size() > 1) ? "sources" : "source"));
 			for (Descriptor other : others) {
 				message.append("\t- In '").append(other.getPropertySource()).append("'");
 				message.append(" with the value '").append(other.getValue()).append("'");
